--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "link-se_project_express": "node_modules/ .bin/symlink-dir ../se_project_express src/se_project_express",
+    "postinstall": "npm run link-se_project_express"
   },
   "eslintConfig": {
     "extends": [
