--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vite-project",
+  "homepage": "https://karhannah.jumpingcrabs.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
