Fixing client side errors

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-project",
-  "homepage": "https://karhannah.jumpingcrabs.com",
+  "homepage": "https://karhannah.jumpingcrab.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
